--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
   <head>
     <title>Pong</title>
+    <link rel="stylesheet" href="pong.css" media="screen" title="no title">
+
+    </style>
   </head>
 
   <body>
+    <h1 id="comp-scoreboard">Computer: 0</h1>
+    <h1 id="human-scoreboard">Human: 0 </h1>
     <canvas height="400" width="600" id="pong" />
     <script type="application/javascript" src="pong.js"></script>
   </body>
