--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <body>
     <h1 id="comp-scoreboard">Computer: 0</h1>
     <h1 id="human-scoreboard">Human: 0 </h1>
-    <div class="wrapper">
-      <div id="ball">
+    <div id="container">
+      <div class="wrapper">
+        <div id="ball">
 
+        </div>
+        <canvas height="600" width="900" id="pong" />
       </div>
-      <canvas height="400" width="600" id="pong" />
     </div>
     <script type="application/javascript" src="pong.js"></script>
   </body>
