audio added. Pre refactor

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class= "instructions">PRESS ANY KEY OR CLICK TO PLAY</p>
                 <p class="instructions">HOVER THE MOUSE TO THE RIGHT OF GAME TO CONTROL YOUR PADDLE</p>
                 <p class="instructions">FIRST TO 10 WINS!</p>
-                <p class="instructions">SCORE 3 IN A ROW TO UNLOCK THE FIREBALL!!!</p>
+                <!-- <p class="instructions">SCORE 3 IN A ROW TO UNLOCK THE FIREBALL!!!</p> -->
         </div>
           <div id="game-over-modal" class="modal-closed">
             <p class= "instructions">GAME OVER</p>
