--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
           <a href="https://angel.co/eli-mordechai-1"><i class="fa fa-angellist git-in dev-icon" aria-hidden="true"></i></a>
         </div>
     </div>
-    <script type="application/javascript" src="pong.js"></script>
+    <script type="application/javascript" src="./lib/bundle.js"></script>
   </body>
 </html>
