fix sound issues, add mute button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div id="modal" class="modal-open">
             <img class="logo" src="img/logo.png" alt="" />
               <h1 class="pause-menu">PAUSED</h1>
-                <p class= "instructions">PRESS ANY KEY OR CLICK TO PLAY</p>
+                <p class= "instructions">SPORTS PONG BY ELI MORDECHAI</p>
+                <p class= "instructions">PRESS ANY KEY TO PLAY</p>
                 <p class="instructions">HOVER THE MOUSE TO THE RIGHT OF GAME TO CONTROL YOUR PADDLE</p>
                 <p class="instructions">FIRST TO 10 WINS!</p>
                 <!-- <p class="instructions">SCORE 3 IN A ROW TO UNLOCK THE FIREBALL!!!</p> -->
@@ -31,9 +32,12 @@
         <canvas height="600" width="900" id="pong" />
       </div>
         <div class="dev-container">
-          <a href="https://github.com/Elimor5"><i class="fa fa-github git-in dev-icon"></i></a>
-          <a href="https://www.linkedin.com/in/eli-mordechai-4781b799"><i class="fa fa-linkedin git-in dev-icon" aria-hidden="true"></i></a>
-          <a href="https://angel.co/eli-mordechai-1"><i class="fa fa-angellist git-in dev-icon" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://github.com/Elimor5"><i class="fa fa-github git-in dev-icon"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/eli-mordechai-4781b799"><i class="fa fa-linkedin git-in dev-icon" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://angel.co/eli-mordechai-1"><i class="fa fa-angellist git-in dev-icon" aria-hidden="true"></i></a>
+          <i id="sound" class="fa fa-volume-off dev-icon" aria-hidden="true"></i>
+          <div class="placeholder"></div>
+          <!-- <i class="fa fa-volume-off dev-icon hide-sound-icon" aria-hidden="true"></i> -->
         </div>
     </div>
     <script type="application/javascript" src="./lib/bundle.js"></script>
