changed ball velocities

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="logo" src="img/logo.png" alt="" />
               <h1 class="pause-menu">PAUSED</h1>
                 <p class= "instructions">SPORTS PONG BY ELI MORDECHAI</p>
-                <p class= "instructions">PRESS ANY KEY TO PLAY</p>
+                <p class= "instructions">PRESS ANY KEY OR CLICK THE MOUSE TO PLAY</p>
                 <p class="instructions">HOVER THE MOUSE TO THE RIGHT OF GAME TO CONTROL YOUR PADDLE</p>
                 <p class="instructions">FIRST TO 10 WINS!</p>
                 <!-- <p class="instructions">SCORE 3 IN A ROW TO UNLOCK THE FIREBALL!!!</p> -->
