update linkedin url

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
         <div class="dev-container">
           <a target="_blank" href="https://github.com/Elimor5"><i class="fa fa-github git-in dev-icon"></i></a>
-          <a target="_blank" href="https://www.linkedin.com/in/eli-mordechai-4781b799"><i class="fa fa-linkedin git-in dev-icon" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/eli-mordechai"><i class="fa fa-linkedin git-in dev-icon" aria-hidden="true"></i></a>
           <a target="_blank" href="https://angel.co/eli-mordechai-1"><i class="fa fa-angellist git-in dev-icon" aria-hidden="true"></i></a>
           <i id="sound" class="fa fa-volume-off dev-icon" aria-hidden="true"></i>
           <div class="placeholder"></div>
